# defendable-router

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.backend.md  README.md  fly.toml  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml
defendable_router/: cli.py  main.py
docs/: API_EXAMPLES.md  ARCHITECTURE.md  DEPLOY_FLY.md  RECEIPTS.md  ROADMAP.md  WORKER_CONTRACT.md
public/: _headers  _redirects  llms.txt  robots.txt  sitemap.xml
scripts/: fly_deploy.sh  fly_smoke.sh
spine/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
spine/defendablerouter/: cli.py  config.py
spine/defendablerouter/agents/: hermes_client.py  hermes_review.py  kimi_review.py  moonshot_client.py  swarmcurator_client.py  swarmjelly_client.py
spine/defendablerouter/api/: server.py
spine/defendablerouter/core/: canonicalize.py  ddeed.py  export.py  hash.py  ids.py  jelly_audit.py  ledger.py  manifest.py  object_paths.py  receipt.py  swarmjelly.py  tribunal.py  tribunal_grade.py  verify.py
spine/defendablerouter/data/: canonical_vocab.json
spine/defendablerouter/examples/: sample_event.json
spine/defendablerouter/publisher/: publish.py
spine/defendablerouter/schemas/: __init__.py  ddeed_stub.py  jelly_audit.py  ledger_record.py  manifest.py  router_event.py  router_receipt.py  training_pair.py  tribunal_stub.py  verdict.py
spine/defendablerouter/util/: corpus_entropy.py  dataset_entropy.py  vocab.py
spine/tests/: test_api.py  test_canonicalize.py  test_export.py  test_hash_integrity.py  test_ledger.py  test_manifest.py  test_publisher.py  test_receipt_schema.py  test_swarmjelly.py  test_tribunal_grade.py  test_verify.py  test_vocab.py
src/: index.css  main.tsx
tests/: conftest.py  test_admin_summary.py  test_admin_workers.py  test_compute_quote.py  test_health.py  test_job_leases.py  test_job_receipts.py  test_membership_gate.py  test_pricing.py  test_receipt_chain.py  test_worker_artifacts.py  test_worker_auth.py  test_workers.py
(+56 files in other folders)
