[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "defendable-router"
version = "0.1.0"
description = "DefendableRouter v0.1 backend for member-only dataset and GPU compute routing."
readme = "README.backend.md"
requires-python = ">=3.11"
authors = [{ name = "DefendableCloud", email = "ops@defendable.cloud" }]
license = { text = "Proprietary" }
dependencies = [
    "email-validator>=2.1,<3.0",
    "fastapi>=0.115,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "psycopg[binary]>=3.2,<4.0",
    "python-dotenv>=1.0,<2.0",
    "sqlalchemy>=2.0,<3.0",
    "typer>=0.12,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
]

[project.scripts]
defendable-router = "defendable_router.cli:app"

[tool.setuptools.packages.find]
include = ["defendable_router*"]
exclude = ["tests*", "data*", "spine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
