[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "defendablerouter"
version = "0.1.0"
description = "DefendableRouter — deterministic receipt spine for the DefendableOS ecosystem."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Mr. Defendable", email = "ops@mrdefendable.com" }]
license = { text = "Proprietary" }
dependencies = [
    "typer>=0.12,<1.0",
    "pydantic>=2.7,<3.0",
    "orjson>=3.10,<4.0",
    "rich>=13.7,<15.0",
    "python-dotenv>=1.0,<2.0",
    "ulid-py>=1.1,<2.0",
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
]

[project.scripts]
defendablerouter = "defendablerouter.cli:main"

[tool.setuptools.packages.find]
include = ["defendablerouter*"]
exclude = ["tests*", "data*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
